# snap4frame

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE.md  README.md  cspell.config.yaml  pyproject.toml  readme.md  todo.md
.config/: cspell.config.yaml
examples/: example01.py
src/snap4frame/: __init__.py  config.py  const.py  hook.py  main.py  types.py
src/snap4frame/core/: decoder.py  filters.py  hook.py  log.py  metaclass.py  store.py  types.py
src/snap4frame/core/handlers/: event.py  exception.py  source.py
src/snap4frame/core/reports/: additional.py  context.py  interpreter.py  machine.py  packages.py
src/snap4frame/processor/: base.py  kit.py
