[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snap4frame"
version = "0.1.2"
description = "Creates a snapshot of the python program for later analysis"
authors = [
    { name = "Panaintescu Adrian Valentin", email = "adrian.cert@gmail.com" },
]
dependencies = [
    "importlib-metadata>=7.0.1",
]
requires-python = ">=3.8"
readme = "readme.md"
license = { file = "license.md" }

[project.optional-dependencies]
msgspec = [
    "msgspec>=0.18.6",
]
requests = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    # { include-group = "ci" },
    # more groups here
    "tox>=4.14.2",
    "ruff>=0.3.7",
    "pre-commit>=3.5.0",
]

[tool.ruff.lint]
extend-select = ["C", "N", "SIM", "PTH", "I", "PL", "FURB"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
